[package]
name = "rustventually"
version = "0.1.0"
authors = ["Allie Signet <allie@cat-girl.gay>"]
edition = "2018"

[dependencies]
serde_json = "1"
serde_yaml = "0.8.17"
chrono = "0.4"
log = "0.4"
env_logger = "0.8.3"

[dependencies.postgres]
version = "0.19.1"
features = ["with-serde_json-1","with-uuid-0_8"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.compass]
git = "https://github.com/alisww/compass"
branch = "main"
features = ["rocket_support"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
features = ["json"]

[dependencies.rocket_sync_db_pools]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
version = "0.1.0-dev"
default-features = false
features = ["postgres_pool"]
[dependencies.reqwest]
version = "0.11"
features = ["json","blocking"]

[[bin]]
name = "fill"
path = "src/fill.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "monitor"
path = "src/monitor.rs"

[[bin]]
name = "test_query"
path = "src/test_query.rs"
